--- a/.github/workflows/telegram_notify.yml
+++ b/.github/workflows/telegram_notify.yml
@@ -12,4 +12,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            Commit message: ${{ github.event.actions.message }}
+            Commit message: ${{ github.action }}
