--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -16,15 +16,8 @@ jobs:
     - name: Testing 
       run: python -m unittest
 
-
-  build:
-    name: Build
+  deployment:
     runs-on: ubuntu-latest
+    environment: production
     steps:
-      - name: send telegram message on push
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            Commit message: ${{ github.event.action }}
+      - name: deploy
