--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -15,5 +15,10 @@ jobs:
         python-version: 3.8
     - name: Testing 
       run: python -m unittest
+      
+    - uses: haishanh/actions-telegram-notification@v1
+        with:
+    notification-token: ${{ secrets.NOTIFICATION_TOKEN }}
+    job-status: ${{ job.status }}
 
  
