--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -7,12 +7,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: notification
-      uses: haishanh/actions-telegram-notification@v1
-      with:
-        notification-token: ${{ secrets.NOTIFICATION_TOKEN }}
-        job-status: ${{ job.status }}
-        
     - uses: actions/checkout@v2
     - name: Set up Python all python versions
       uses: actions/setup-python@v2
@@ -20,5 +14,11 @@ jobs:
         python-version: 3.8
     - name: Testing 
       run: python -m unittest
-
-    
+      
+      if: ${{ always() 
+    - name: notification
+      uses: haishanh/actions-telegram-notification@v1
+      with:
+        notification-token: ${{ secrets.NOTIFICATION_TOKEN }}
+        job-status: ${{ job.status }} }}
+        
