--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -15,10 +15,11 @@ jobs:
     - name: Testing 
       run: python -m unittest
       
-      if: ${{ always() }}
-    - name: notification
-      uses: haishanh/actions-telegram-notification@v1
-      with:
-        notification-token: ${{ secrets.NOTIFICATION_TOKEN }}
-        job-status: ${{ job.status }} 
+    - name: send telegram message on push
+      uses: appleboy/telegram-action@master
+        with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: |
+            Состояние: ${{ job.status }}
         
