--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -19,7 +19,7 @@ jobs:
     
 
   notification:
-    runs-on: ununtu-latest
+    runs-on: ubuntu-latest
     steps:
     - name: send telegram message on push
       uses: appleboy/telegram-action@master
