--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -6,26 +6,23 @@ on: [push]
 jobs:
   build-linux:
     runs-on: ubuntu-latest
-
+  
     steps:
     - uses: actions/checkout@v2
+        if ${{jobs.build-linux.continue-on-error}}
     - name: Set up Python all python versions
       uses: actions/setup-python@v2
+        ${{jobs.build-linux.continue-on-error}}
       with:
         python-version: 3.8
     - name: Testing 
       run: python -m unittest
       
-    
-
-  notification:
-    runs-on: ubuntu-latest
-    steps:
     - name: send telegram message on push
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-            Состояние: ${{ job.status.build-linux }}
-        
+            Состояние: ${{ job.status }}
+
