--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -19,7 +19,7 @@ jobs:
 
       
     - name: teleg
-      if: ${{ always() }}
+      if: ${{ always() and job.status == 'failure'}}
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
@@ -27,7 +27,6 @@ jobs:
         message: |
             Состояние: ${{ job.status }}
             
-
     - name: bad_teleg
       if: ${{ job.status == 'success' }}
       uses: appleboy/telegram-action@master
