--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -19,7 +19,7 @@ jobs:
 
       
     - name: teleg
-      if: ${{ always() and job.status == 'failure'}}
+      if: ${{ failure() }}
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
