--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -25,7 +25,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-            Состояние: ${{ needs.build-linux.output }}
+            Состояние: ${{ jobs.build-linux.output }}
             
     - name: bad_teleg
       if: ${{ job.status == 'success' }}
