--- a/.github/workflows/python-tester-of-tests.yml
+++ b/.github/workflows/python-tester-of-tests.yml
@@ -25,7 +25,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-            Состояние: ${{ jobs.job1.outputs }}
+            Состояние: ошибка в тестах, детальная иформация: https://github.com/yegorys/balykov_tz3/actions
             
     - name: bad_teleg
       if: ${{ job.status == 'success' }}
